<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">智能物流</string>

    <string name="hint_welcome">欢迎您使用\n本系统</string>
    <string name="hint_waiting">请稍后</string>
    <string name="btn_submit">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="action_next">下一步</string>
    <string name="hint_net_error">请求服务器失败，请检查网络</string>
    <string name="hint_splash_time">跳过(<xliff:g>%1$s</xliff:g>)</string>
    <string name="hint_permission">权限未全部开放，可能对程序有一定的影响！</string>
    <string name="hint_no_nfc">设备不支持NFC！</string>
    <string name="hint_no_nfc_msg">设备不支持NFC，请选择车牌号码</string>
    <string name="hint_nfc_open">NFC功能未开启，是否开启NFC?</string>
    <string name="hint_nfc_fail">读卡失败，请重新刷卡！</string>
    <string name="hint_update_title">APP有新的版本，是否更新？</string>
    <string name="hint_update_no_use">您的APP版本为最新版本，无需更新。</string>
    <string name="hint_update_permission">新的版本已更新，但您的存储权限暂未开启，如需更新，请打开权限后，到设置界面点击版本信息进行更新！</string>
    <string name="hint_data_null">暂无数据</string>
    <string name="hint_car_select">请选择车牌号码或刷卡</string>
    <string name="hint_card_nfc">请刷卡</string>
    <string name="hint_card_nfc_first">请先刷卡</string>
    <string name="hint_search_text">查询</string>
    <string name="hint_text_null">———</string>
    <string name="hint_truck_search">请输入要搜索的车牌号码</string>
    <string name="toast_net_error">服务器连接异常，请联系管理员。</string>
    <string name="toast_data_null_error">操作失败，请稍后重试</string>

    <!-- 登录页 -->
    <string name="login_title">一卡通系统</string>
    <string name="login_customer">客户</string>
    <string name="login_user">用户</string>
    <string name="login_name">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login_submit">登录</string>

    <!-- 服务器地址设置 -->
    <string name="ip_set_title">服务器配置</string>
    <string name="ip_set_address">服务器地址:</string>
    <string name="ip_set_point">.</string>
    <string name="ip_set_colon">:</string>
    <string name="ip_set_error">请输入有效的服务地址</string>

    <!-- 主页 -->
    <string name="main_menu_work">首页</string>
    <string name="main_menu_collect">汇总</string>
    <string name="main_menu_query">查询</string>
    <string name="main_menu_person">个人信息</string>

    <!-- 首页 -->
    <string name="main_title">地磅计量查询系统</string>
    <string name="main_company">单位名称</string>
    <string name="main_weigh">累计过磅车次</string>
    <string name="main_sum">累计: </string>
    <string name="main_data">溯源查询</string>
    <string name="main_num">0</string>
    <string name="main_weigh_day">今日过磅车次</string>
    <string name="main_weigh_month">本月过磅车次</string>

    <!-- 汇总 -->
    <string name="collect_title">汇总</string>
    <string name="collect_sale">发料车辆数:</string>
    <string name="collect_purchase">收料车辆数:</string>
    <string name="collect_num">0</string>

    <!-- 汇总列表 -->
    <string name="collect_sum_title">汇总列表</string>
    <string name="collect_sum_truck">车牌号码</string>
    <string name="collect_sum_driver">司机姓名</string>
    <string name="collect_sum_material">物料名称</string>
    <string name="collect_sum_net">物料净重</string>
    <string name="collect_sum_deliver">运输单位</string>
    <string name="collect_sum_create">创建时间</string>

    <!-- 汇总详情 -->
    <string name="collect_detail_title">详情</string>
    <string name="collect_detail_truck">车牌号码:</string>
    <string name="collect_detail_driver">司机姓名:</string>
    <string name="collect_detail_number">身份证号:</string>
    <string name="collect_detail_flow">业务类型:</string>
    <string name="collect_detail_material">物料名称:</string>
    <string name="collect_detail_net">物料净重:</string>
    <string name="collect_detail_tare">物料皮重:</string>
    <string name="collect_detail_gross">物料毛重:</string>
    <string name="collect_detail_deliver">运输单位:</string>
    <string name="collect_detail_receive">收货单位:</string>
    <string name="collect_detail_create">创建时间:</string>
    <string name="collect_detail_yi">一磅时间:</string>
    <string name="collect_detail_er">二磅时间:</string>

    <!-- 查询 -->
    <string name="query_title">查询</string>
    <string name="query_flow">业务类型</string>
    <string name="query_flow_hint">请输入业务类型</string>
    <string name="query_start">开始时间</string>
    <string name="query_start_hint">请选择开始时间</string>
    <string name="query_end">结束时间</string>
    <string name="query_end_hint">请选择结束时间</string>
    <string name="query_truck">车牌号码</string>
    <string name="query_truck_hint">请输入车牌号码</string>
    <string name="query_driver">司机姓名</string>
    <string name="query_material">物料名称</string>
    <string name="query_net">物料净重</string>
    <string name="query_deliver">运输单位</string>
    <string name="query_create">创建时间</string>

    <!-- 查询详情 -->
    <string name="query_detail_title">详情</string>
    <string name="query_detail_truck">车牌号码:</string>
    <string name="query_detail_driver">司机姓名:</string>
    <string name="query_detail_number">身份证号:</string>
    <string name="query_detail_flow">业务类型:</string>
    <string name="query_detail_material">物料名称:</string>
    <string name="query_detail_net">物料净重:</string>
    <string name="query_detail_tare">物料皮重:</string>
    <string name="query_detail_gross">物料毛重:</string>
    <string name="query_detail_deliver">运输单位:</string>
    <string name="query_detail_receive">收货单位:</string>
    <string name="query_detail_create">创建时间:</string>
    <string name="query_detail_yi">一磅时间:</string>
    <string name="query_detail_er">二磅时间:</string>

    <!-- 个人信息 -->
    <string name="person_title">个人信息</string>
    <string name="person_name">用户姓名</string>
    <string name="person_company">单位名称</string>
    <string name="person_company_code">单位编号</string>
    <string name="person_content">备注</string>
    <string name="person_content_hint">暂无信息展示</string>
    <string name="person_change">修改密码</string>
    <string name="person_login_out">退出</string>
    <string name="person_login_out_hint">确认退出当前用户？</string>

    <!-- 修改密码 -->
    <string name="pwd_title">修改密码</string>
    <string name="pwd_old">原始密码:</string>
    <string name="pwd_new">新的密码:</string>
    <string name="pwd_confirm">确认密码:</string>
    <string name="pwd_old_hint">请输入原始密码</string>
    <string name="pwd_new_hint">请输入新的密码</string>
    <string name="pwd_confirm_hint">请输入确认密码</string>
    <string name="pwd_old_error">原始密码输入错误!</string>
    <string name="pwd_new_error">新密码与确认密码不一致!</string>
    <string name="pwd_submit">提交</string>

</resources>