<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgWindow"
    android:orientation="vertical"
    tools:context=".ui.person.PwdActivity">

    <include layout="@layout/toolbar_custom_simple" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/view_height_10"
                    android:text="@string/pwd_old"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_15" />

                <EditText
                    android:id="@+id/et_pwd_old"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/view_height_10"
                    android:layout_marginRight="@dimen/view_height_10"
                    android:layout_weight="1"
                    android:background="@drawable/shape_edit"
                    android:hint="@string/pwd_old_hint"
                    android:inputType="textPassword"
                    android:padding="@dimen/view_height_5"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/view_height_10"
                    android:text="@string/pwd_new"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_15" />

                <EditText
                    android:id="@+id/et_pwd_new"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/view_height_10"
                    android:layout_marginRight="@dimen/view_height_10"
                    android:layout_weight="1"
                    android:background="@drawable/shape_edit"
                    android:hint="@string/pwd_new_hint"
                    android:inputType="textPassword"
                    android:padding="@dimen/view_height_5"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/view_height_10"
                    android:text="@string/pwd_confirm"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_15" />

                <EditText
                    android:id="@+id/et_pwd_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/view_height_10"
                    android:layout_marginRight="@dimen/view_height_10"
                    android:layout_weight="1"
                    android:background="@drawable/shape_edit"
                    android:hint="@string/pwd_confirm_hint"
                    android:inputType="textPassword"
                    android:padding="@dimen/view_height_5"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_15" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/view_divider_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBgWhite"
        android:orientation="horizontal"
        android:padding="@dimen/view_height_10">

        <Button
            android:id="@+id/btn_pwd_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_height_15"
            android:layout_marginRight="@dimen/view_height_15"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_normal"
            android:text="@string/pwd_submit"
            android:textColor="@color/colorBgWhite"
            android:textSize="@dimen/text_size_17" />
    </LinearLayout>
</LinearLayout>